package com.dmm.bootcamp.yatter2024.ui.post

data class PostBindingModel(
  val avatarUrl: String?,
  val statusText: String,
)
